codex-rs/tui/src/chatwidget/tokens/snapshots/codex_tui__chatwidget__tokens__scope__tests__cost_empty_conversation_other_conversations_wide.snap
---
source: tui/src/chatwidget/tokens/scope_tests.rs
expression: empty
---
  Cost — this conversation
  Requested UTC day: 2026-09-16

› This conversation on 2026-09-16 (UTC): no recorded requests.
  Other conversations on this day, not included above: 3 requests in 2 conversations.
  • local-mock · mock-model — Pay per use. 1 request, 55 tokens. Estimated cost: no price
  available.
  • OpenAI · gpt-5.4 — Pay per use. 2 requests, 220 tokens. Estimated cost: $0.001420.
  Other conversations' estimated cost: at least $0.001420 (1 attempt had no price).
  To see those requests, open that conversation with /resume and run /cost there.
  Next step for requests with no price: check the bill from local-mock. No published price

  Other dates: /cost [YYYY-MM-DD]  or  START END hour|day|week|month  (UTC)
  ↑↓ scroll · Enter open · Esc back/close
