codex-rs/tui/src/chatwidget/tokens/snapshots/codex_tui__chatwidget__tokens__scope__tests__cost_missing_price_request_page.snap
---
source: tui/src/chatwidget/tokens/scope_tests.rs
expression: "pages[1].text.join(\"\\n\")"
---
Provider: local-mock
Model: mock-model
Billing: Pay per use
Estimated cost: no price available
Next step for requests with no price: check the bill from local-mock. No published price covers them, so no cost is shown for them here.
Tokens: 55 tokens
—— Details ——
Billed cost: not reported — local-mock doesn't state its actual charge, so this is an estimate; check the bill from local-mock.
Request: 00000000-0000-0000-0000-0000000003ea
